# light-map-navigation

./: .gitignore  .gitmodules  README.md  README_old.md  build_dependencies.sh  build_project.sh  osm2pgm.sh  requirements.txt  save_grid_map.sh  start_gsam2_service.sh
.devcontainer/: devcontainer.json
docker/: Dockerfile
src/building_entrance_recognition/: README.md  package.xml  setup.cfg  setup.py
src/building_entrance_recognition/building_entrance_recognition/:  entrance_recognition_service.py  entrance_recognition_client.py  entrance_recognition_server copy.py  entrance_recognition_server.py  entrance_recognition_service.py  test_vlm.py
src/building_entrance_recognition/config/: api_config.yaml
src/building_entrance_recognition/launch/: entrance_recognition_server.launch.py
src/classic_nav_bringup/: CMakeLists.txt  package.xml
src/classic_nav_bringup/PCD/: SMALL_OSM.pcd
src/classic_nav_bringup/launch/: bringup_real.launch.py  bringup_sim.launch.py
src/classic_nav_bringup/map/: LARGE_OSM.pgm  LARGE_OSM.yaml  MEDIUM_OSM.pgm  MEDIUM_OSM.yaml  SMALL_OSM.pgm  SMALL_OSM.yaml
src/classic_nav_bringup/urdf/: sentry_robot_real.xacro  sentry_robot_sim.xacro
src/classic_navigation/classic_navigation/: CMakeLists.txt  package.xml
src/classic_perception/ipm/: README.md
src/custom_interfaces/: CMakeLists.txt  package.xml
src/custom_interfaces/action/: DeliveryTask.action  EntranceExploration.action  FindUnit.action
src/custom_interfaces/msg/: GroundedSam.msg  Path.msg  TaskDescription.msg
src/custom_interfaces/srv/: GetEntranceId.srv  GetGroundedSamResult.srv  GetTaskSequence.srv  GetUnitNum.srv  GetWaypoints.srv  TaskRecord.srv  TriggerReplan.srv
src/delivery_benchmark/: README.md  delivery_request_generator.py  get_house_number_position.py  my_instructions.txt  plot_house_number_with_osm.py  start_delivery.sh  task_record.py
src/delivery_benchmark/data/: delivery_instructions.txt  delivery_instructions2.txt  delivery_instructions3.txt  delivery_instructions4.txt  delivery_instructions_gt.txt  delivery_instructions_gt2.txt  delivery_instructions_gt3.txt  delivery_instructions_gt4.txt  delivery_instructions_gt_medium.txt  delivery_instructions_gt_medium2.txt  delivery_instructions_medium.txt  delivery_instructions_medium2.txt  delivery_instructions_small.txt  delivery_instructions_small2.txt  delivery_instructions_small_gt.txt  delivery_instructions_small_gt2.txt
src/delivery_benchmark/evaluation/: nav_evaluation.py  nav_evaluation2.py
src/delivery_bringup/: package.xml  setup.cfg  setup.py
src/delivery_bringup/config/: delivery_bringup_sim.yaml
src/delivery_bringup/launch/: delivery_system_sim.launch.py
src/delivery_executor/: package.xml  setup.cfg  setup.py
src/delivery_executor/config/: delivery_executor_sim.yaml
src/delivery_executor/delivery_executor/: delivery_executor_action_client.py  delivery_executor_action_server.py
src/entrance_exploration/: package.xml  setup.cfg  setup.py
src/entrance_exploration/config/: entrance_exploration_params_sim.yaml
src/entrance_exploration/entrance_exploration/: entrance_exploration_action_client.py  entrance_exploration_action_server.py  exploration_route.py
src/entrance_exploration/launch/: entrance_exploration_action_server.launch.py  entrance_exploration_action_server_launch.py
src/gazebo_simulation/gazebo_simulation/: CMakeLists.txt  package.xml
src/grounded_sam2/: package.xml  requirements.txt  setup.cfg  setup.py
src/grounded_sam2/config/: gsam2_params.yaml
src/grounded_sam2/grounded_sam2/: grounded_sam2_client.py  grounded_sam2_server.py
src/grounded_sam2/launch/: gsam2_node.launch.py
src/llm_bt_executor/: CMakeLists.txt  package.xml
src/llm_bt_executor/behavior_trees/: navigation.xml
src/llm_bt_executor/config/: bt_executor.yaml
src/llm_bt_executor/include/: navigation_node.h
src/llm_bt_executor/launch/: llm_bt_executor.launch.xml
src/llm_bt_executor/src/: llm_bt_executor.cpp  navigation_node.cpp
src/llm_delivery/: package.xml  setup.cfg  setup.py
src/llm_delivery/llm_delivery/: __init__.py  llm_agent.py  llm_delivery_node.py  medium.osm  osm_handler.py  osm_route.py  real1.osm  robot_pose_pub_node.py  small.osm
src/llm_exploration_py/: package.xml  readme.md  setup.cfg  setup.py
src/llm_exploration_py/OSM/: osm_world.osm  osm_world1.osm  real1.osm
src/llm_exploration_py/llm_exploration_py/: Tongyi_VLM.py  exploration_route.py  get_unit_num_service_client.py  get_unit_num_service_server.py  llm_exploration_client.py  llm_exploration_server.py  prompt_en2.txt
src/llm_navigation/: README.md  Tongyi_LLM_Nav.py  llm_agent.py  llm_delivery_node.py  osm_route.py  prompt_en.txt
src/osrm_server/: package.xml  setup.cfg  setup.py
src/osrm_server/launch/: osrm_server.launch.py  osrm_server.launch.xml
src/osrm_server/osrm_server/: osrm_server.py  osrm_server_node.py  path_publisher.py
src/replanner/: package.xml  setup.py
src/replanner/config/: waypoint_replanner.yaml
src/replanner/launch/: waypoint_replanner.launch.py
src/replanner/replanner/: waypoint_replanner_client.py  waypoint_replanner_server.py
src/rm_localization/icp_registration/: CMakeLists.txt
src/rm_localization/icp_registration/config/: icp.yaml
src/rm_localization/icp_registration/include/: cloud_registration.h
src/rm_localization/icp_registration/include/common/: point_types.h
src/rm_localization/icp_registration/include/fast_gicp/gicp/impl/: fast_gicp_impl.hpp  fast_vgicp_impl.hpp
src/rm_localization/icp_registration/include/icp_registration/: icp_registration.hpp
src/rm_localization/icp_registration/include/ndt_omp/: ndt_omp.h  ndt_omp_impl.hpp
src/rm_localization/icp_registration/src/: icp_registration.cpp
src/rm_nav_bringup/PCD/: RMUL.pcd
src/rm_nav_bringup/launch/: bringup_sim.launch.py
src/rm_nav_bringup/map/: MEDIUM_OSM.yaml  OSM.yaml  SMALL_OSM.pgm  SMALL_OSM.yaml
src/rm_nav_bringup/urdf/: sentry_robot_sim.xacro
src/rm_simulation/pb_rm_simulation/: CMakeLists.txt
src/task_planning/: package.xml  setup.py
src/utils_pkg/: package.xml  setup.py
(+45 files in other folders)
