<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>building_entrance_recognition</name>
  <version>0.0.0</version>
  <description>Building Entrance Recognition</description>
  <maintainer email="wjh_9696@163.com">root</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <depend>custom_interfaces</depend>
  <depend>utils_pkg</depend>
  <depend>python3-yaml</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
